css/styles.css
* {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.container {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
}

header {
    background-color: rgb(52, 57, 61);
    overflow: hidden;
}

.nav-head {
    height: 48px;
    float: left;
    position: relative;
    padding-left: 5vw;
}

.nav-head p {
    font-size: 14px;
    font-family: 'Open Sans';
    font-weight: 600;
    color: rgb(235, 235, 235);
    margin: 0;
    position: absolute;
    top: 50%;
    transform: translate(0, -50%);
}

.burg {
    background-color: rgb(32, 37, 41);
    cursor: pointer;
    border: none !important;
}

.fa-bars {
    color: rgb(235, 235, 235);
    font-size: 22px;
    padding: 13px;
}

.nav-mobi {
    background-color: rgb(52, 57, 61);
    text-align: right;
} 

.nav-menu {
    display: none;
    position: absolute;
    width: 100%;
    left: 0;
    box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.2);
    background-color: rgb(52, 57, 61);
    z-index: 1;
}

.column {
    float: right;
    width: 80%;
    height: 250px;
    padding: 10px;
    background-color: rgb(52, 57, 61);
}

.column a {
    float: none;
    color: rgb(235, 235, 235);
    font-size: 14px;
    font-family: 'Open Sans';
    text-decoration: none;
    text-align: right;
    padding: 10px;
    margin: 6px;
    display: block;
}

.column a:hover {
    background-color: rgb(94, 94, 94);
}

.row:after {
    content: "";
    display: table;
    clear: both;
}

.burg:focus ~ .nav-menu,
.burg:active ~ .nav-menu,
.burg:hover .nav-menu { 
    display: block; 
}

.nav-pc {
    height: 66px;
    margin-left: 2em;
    position: relative;
}

.nav-pc .links {
    margin: 0;
    position: absolute;
    top: 50%;
    transform: translate(0, -50%);
}

.links a {
    font-size: 16px;
    font-family: 'Open Sans';
    font-weight: 600;
    color: rgb(235, 235, 235);
    padding: 14px 16px;
    text-decoration: none;
}

.nav-pc a:hover {
    background-color: rgb(94, 94, 94);
}

main {
    margin-left: auto;
    margin-right: auto;
    max-width: 1216px;
}

.big-link {
    background: linear-gradient(to right, rgb(21, 176, 195), rgb(8,144,168));
    padding: 16% 10%;
}

.big-link-head a {
    display: block;
    font-size: 6.5vw;
    font-weight: 600;
    font-family: 'Open Sans';
    color: white;
    text-decoration: none;
}

.big-link .link {
    display: inline-block;
    margin-top: 0;
    position: relative;
}

.link-arrow {
    display: block;
    padding-top: 5%;
    width: 88.5%;
    height: 9vw;
}

.link-arrow .text {
    float: left;
    font-family: 'Open Sans';
    font-weight: 600;
    font-size: 3vw;
    color: rgb(169, 212, 222);
    text-decoration: none;
}

.arrow-icon {
    float: right;
    font-size: 3vw;
    color: white;
}

.rhood {
    height: 20vw;
}

.rhood div {
    overflow: hidden;
    height: 20vw;
    position: relative;
}

.rhood-text {
    float: left;
    padding-left: 10.5%;
    background-color: rgb(39,33,44);
    width: 80%;
}

.rhood-text span {
    font-size: 3vw;
    color: rgb(146,130,160);
    font-family: 'Open Sans';
    font-weight: 600;
    margin: 0;
    position: absolute;
    top: 50%;
    transform: translate(0, -50%);
}

.rhood-arrow {
    float: left;
    background-color: rgb(188,49,131);
    width: 20%;
}

.rhood-arrow i {
    font-size: 4.5vw;
    color: white;
    margin: 0;
    position: absolute;
    text-decoration: none;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.photos {
    width: 100%;
    height: 28.7vw;
}

.photos div {
    position: relative;
}

.photos .photos-arrow {
    float: left;
    background-color: rgb(91,15,161);
    width: 33.33%;
    height: 28.7vw;
}

img {
    float: left;
    height: 28.7vw;
    width: 33.33%;
}

.photos-arrow i {
    font-size: 4.5vw;
    color: white;
    margin: 0;
    position: absolute;
    text-decoration: none;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.text-l {
    background-color: rgb(235,235,235);
    padding: 8%;
    padding-top: 5%;
    padding-bottom: 15%;
    overflow: hidden;
}

.txt-hd h1 {
    color: rgb(8,140,165);
    font-size: 2.6vw;
    font-weight: 600;
    font-family: 'Open Sans';
    text-decoration: none;
}

.txt-hd a {
    text-decoration: none;
}

.txt-column1, .txt-column2 {
    float: left;
    width: 50%;
    padding-top: 2%;
    font-size: 1.3vw;
    font-family: 'Open Sans';
    font-weight: 600;
    line-height: 170%;
    color: rgb(81,81,81)
}

.txt-column1 {
    padding-right: 5%;
}

.txt-column2 {
    padding-left: 5%;
}

@media (min-width: 980px) {
    nav {
        height: 70px;
    }

    .nav-mobi {
        display: none;
    }

    .nav-pc {
        display: block;
    }
}

@media (min-width: 1216px) {
    .big-link-head a {
        font-size: 79px;
    }

    .link-arrow {
        width: 861px;
        height: 109px;
    }

    .big-link-head {
        width: 874px;
    }

    .rhood, .rhood div {
        height: 242px;
    }

    .link-arrow .text, 
    .arrow-icon, 
    .rhood-text span {
        font-size: 36px;
    }

    .rhood-arrow i, .photos-arrow i {
        font-size: 54px;
    }

    img,
    .photos,
    .photos .photos-arrow {
        height: 348.7px;    
    }

    .txt-hd h1 {
        font-size: 32px;
    }

    .txt-column1, .txt-column2 {
        font-size: 16px;
    }
}

@media (max-width: 980px) {
    .nav-pc {
        display: none;
    }

    .nav-mobi {
        display: block;
    }
}

@media (max-width: 640px) {
    img,
    .photos .photos-arrow {
        width: 100%; 
        height: 86.1vw;   
    }

    .photos {
        width: 100%; 
        height: 258.3vw;   
    }

    .photos-arrow i {
        font-size: 9.5vw;
    }

    .text-l h1 {
        font-size: 5.4vw;
        padding-left: 2%;
    }

    .txt-column1, .txt-column2 {
        width: 100%;
        font-size: 4.2vw;
        padding: 2% 2%;
    }
}

